--- a/index.html
+++ b/index.html
@@ -52,44 +52,52 @@
   </header>
   <main>
     <h1 class="visually-hidden">Магазин мороженного Глэйси</h1>
-    <section class="gallery-product">
+    <section class="promo">
       <h2 class="visually-hidden">Галерея товаров</h2>
-      <span class="gallery-product-title">
+      <span class="promo-title">
         Нежный пломбир <br>
         с клубничным джемом
       </span>
       <p>Натуральное мороженое из свежих сливок
         и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.
       </p>
-      <button class="button" type="button">Заказать</button>
-      <ol class="gallery-product-pagination">
-        <li class="gallery-product-pagination-item">
-          <button class="gallery-product-pagination-button gallery-product-pagination-button-current" type="button">
+      <a class="promo-button" href="#">
+        <span class="promo-button-text">Заказать</span>
+      </a>
+      <ol class="promo-pagination">
+        <li class="promo-pagination-item">
+          <button class="promo-pagination-button promo-pagination-button-current" type="button">
             <span class="visually-hidden">1 фото</span>
           </button>
         </li>
-        <li class="gallery-product-pagination-item">
-          <button class="gallery-product-pagination-button" type="button">
+        <li class="promo-pagination-item">
+          <button class="promo-pagination-button" type="button">
             <span class="visually-hidden">2 фото</span>
           </button>
         </li>
-        <li class="gallery-product-pagination-item">
-          <button class="gallery-product-pagination-button" type="button">
+        <li class="promo-pagination-item">
+          <button class="promo-pagination-button" type="button">
             <span class="visually-hidden">3 фото</span>
           </button>
         </li>
       </ol>
-      <img class="gallery-image gallery-image-current" src="images/ice-cream-plombir.png" width="306" height="507"
-        alt="Нежный пломбир">
-      <img class="gallery-image" src="images/ice-cream-banana.png" width="66" height="150" alt="Сливочное мороженое">
-      <img class="gallery-image" src="images/ice-cream-marshmallows.png" width="66" height="150"
-        alt="Карамельный пломбир">
-      <button class="gallery-button gallery-prev" type="button">
-        <span class="visually-hidden">Предыдущее фото</span>
-      </button>
-      <button class="galry-button gallery-next" type="button">
-        <span class="visyally-hidden">Следующее фото</span>
-      </button>
+      <div class="block-promo-current">
+        <img class="promo-image promo-image-current" src="images/ice-cream-plombir.png" width="306" height="507"
+          alt="Нежный пломбир">
+        <button class="promo-button promo-prev" type="button">
+          <span class="visually-hidden">Предыдущее фото</span>
+        </button>
+        <button class="galry-button promo-next" type="button">
+          <span class="visyally-hidden">Следующее фото</span>
+        </button>
+      </div>
+      <div class="block-promo">
+        <img class="promo-image" src="images/ice-cream-banana.png" width="66" height="150" alt="Сливочное мороженое">
+      </div>
+      <div class="block-promo">
+        <img class="promo-image" src="images/ice-cream-marshmallows.png" width="66" height="150"
+          alt="Карамельный пломбир">
+      </div>
       <ul class="social-list">
         <li class="social-item">
           <a class="button" href="#">
@@ -177,8 +185,9 @@
       </ul>
     </section>
     <section class="description">
-      <h2 class="description-title">Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного
-        проиводства на развес</h2>
+      <h2 class="visually-hidden">Преимущества магазина</h2>
+      <span class="description-title">Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного
+        проиводства на развес</span>
       <ul class="description-item">
         <li class="description-list">
           <img class="description-image" src="images/vector/ice-cream.svg" width="48" height="48"
@@ -234,40 +243,40 @@
     <section class="delivery-content">
       <h2 class="visually-hidden">Форма доставки</h2>
       <p>Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.</p>
-      <form class="delivery-content-form" action="http://echo.htmlacademy.ru/" method="POST">
-        <p class="delivery-content-form-date">
+      <form class="form-delivery" action="http://echo.htmlacademy.ru/" method="POST">
+        <p class="form-delivery-date">
           <span class="form-label form-label-icon">
-            <label for="delivery-content-date">Дата</label>
+            <label for="form-label-date">Дата</label>
             <button class="info" type="button">
               <span class="visually-hidden">Посмотреть дополнительную информацию</span>
             </button>
           </span>
-          <input type="text" id="delivery-content-date" name="delivery-date" placeholder="01.04.2020">
+          <input type="text" id="form-label-date" name="date-delivery" placeholder="01.04.2020">
         </p>
-        <p class="delivery-content-form-phone">
-          <label for="delivery-content-phone">Телефон</label>
-          <input type="text" id="delivery-content-phone" name="phone" placeholder="+7 800 999-00-00">
+        <p class="form-delivery-phone">
+          <label for="form-label-phone">Телефон</label>
+          <input type="text" id="form-label-phone" name="phone" placeholder="+7 800 999-00-00">
         </p>
-        <p class="delivery-content-form-adress">
+        <p class="form-delivery-adres">
           <span class="form-label form-label-icon">
-            <label for="delivery-content-adress">Адрес</label>
+            <label for="form-label-adres">Адрес</label>
             <button class="info" type="button">
               <span class="visually-hidden">Посмотреть дополнительную информацию</span>
             </button>
           </span>
-          <input type="text" id="delivery-content-adress" name="adress" placeholder="ул. Большая Конюшенная, 19/8">
+          <input type="text" id="orm-label-adres" name="adres" placeholder="ул. Большая Конюшенная, 19/8">
         </p>
-        <button class="button" type="submit">Отправить</button>
+        <a class="link-form button" href="#"><span>Отправить</span></a>
       </form>
     </section>
-    <section class="adress">
+    <section class="contacts">
       <h2 class="visually-hidden">Адрес</h2>
-      <img class="adress-image" src="#" alt="мороженное в рожках">
-      <div class="adress-content">
-        <p class="adress-content-text">Адрес главного офиса и офлайн-магазина: </p>
-        <span class="adress-content-adress">наб. Реки Карповки, 5 лит П, Санкт-Петербург</span>
+      <img class="contacts-image" src="#" alt="мороженное в рожках">
+      <div class="contacts-content">
+        <p class="contacts-content-text">Адрес главного офиса и офлайн-магазина: </p>
+        <span class="contacts-content-adres">наб. Реки Карповки, 5 лит П, Санкт-Петербург</span>
         <p>Для заказов по телефону:</p>
-        <span class="adress-content-phone">+7 (812) 812-12-12</span>
+        <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         <p>(с 10 до 20 ежедневно)</p>
         <button class="button" type="submit">Форма обратной связи</button>
       </div>
@@ -297,7 +306,7 @@
     <section class="footer-info">
       <h3 class="visually-hidden">Информация</h3>
       <p class="footer-info-suppliers">
-        <a class="" href="">Для поставщиков</a>
+        <a class="" href="#">Для поставщиков</a>
       </p>
       <p class="footer-info-document">
         <a href="#">Наши документы</a>
@@ -312,7 +321,8 @@
     <section class="copyright">
       <h3 class="visually-hidden">Копирайт</h3>
       <a class="copyright-link" href="#">
-        <img class="copyright-image" src="images/vector/logo_htmlacademy.svg" width="93" height="27" alt=".html academy">
+        <img class="copyright-image" src="images/vector/logo_htmlacademy.svg" width="93" height="27"
+          alt=".html academy">
       </a>
       <p>Сделано в <a href="#">.html academy</a> © 2021</p>
     </section>
